--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 			<title>LOKAHI - WATER EXPLORER</title>
 			<link rel="stylesheet" type="text/css" href="style.css">
 			<link rel="icon" type="image/png" href="icones/ico-range-lokahi-mini.png">
+			<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"> 
 		</head>
-	<body>
+	
 		<header>
+			<img src="images/logo-lokahi-menu-top.png" alt="logo" class="logo" title="logo">
 			<nav>
 				<ul class="menu_principal">
 					<li><a href="PHILOSOPHY.html">PHILOSOPHY</a></li>
@@ -17,5 +19,7 @@
 				</ul>
 			</nav>
 		</header>
+		<body>
+		<img src="">
 </body>
 </html>
