dernier push du soir

--- a/index.html
+++ b/index.html
@@ -18,8 +18,21 @@
 					<li><a href="RETRAILERS">RETRAILERS</a></li>
 				</ul>
 			</nav>
+			<nav>
+				<ul id="icones">
+					<li><img src="icones/ico-search.png" alt="search" class="icones"></li>
+					<li>|</li>
+					<li><img src="icones/ico-account.png" alt="account" class="icones"></li>
+					<li>|</li>
+					<li><img src="icones/ico-cart-orange-petit.png" alt="cart-orange" class="icones"></li>
+					<li>|</li>
+					<li><img src="icones/ico-heart-bleu-contour.png"></li>
+				</ul>
+			</nav>
 		</header>
 		<body>
-		<img src="images/slider-home.png">
+		<div id="slider">
+			<img src="images/slider-home.png" alt="slider" title="slider" class="slider">
+		</div>
 </body>
 </html>
