--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 			<title>LOKAHI - WATER EXPLORER</title>
 			<link rel="stylesheet" type="text/css" href="style.css">
 			<link rel="icon" type="image/png" href="icones/ico-range-lokahi-mini.png">
-			<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"> 
+			<!--<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"> -->
+			<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+			<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 		</head>
 	
 		<header>
@@ -30,9 +32,15 @@
 				</ul>
 			</nav>
 		</header>
-		<body>
-		<div id="slider">
-			<img src="images/slider-home.png" alt="slider" title="slider" class="slider">
-		</div>
+			<body>
+				<div id="slider">
+					<img src="images/slider-home.png" alt="slider" title="slider" class="slider">
+				</div>
+
+				<div id="middle">
+					<div id="img_left"><img src="icones/ico-range-race.png" class="ico_middle"><p>RACE</p></div>
+					<div id="img_middle"><img src="icones/ico-range-wave.png" class="ico_middle"><p>WAVE</p></div>
+					<div id="img_right"><img src="icones/ico-range-discover.png" class="ico_middle"><p>DISCOVER</p></div>
+				</div>
 </body>
 </html>
