plein de problème

--- a/index.html
+++ b/index.html
@@ -22,25 +22,28 @@
 			</nav>
 			<nav>
 				<ul id="icones">
-					<li><img src="icones/ico-search.png" alt="search" class="icones"></li>
-					<li>|</li>
-					<li><img src="icones/ico-account.png" alt="account" class="icones"></li>
-					<li>|</li>
-					<li><img src="icones/ico-cart-orange-petit.png" alt="cart-orange" class="icones"></li>
-					<li>|</li>
-					<li><img src="icones/ico-heart-bleu-contour.png"></li>
+					<li><a href="#"><img src="icones/ico-search.png" alt="search" class="icones"></a></li>
+					<!--<li>|</li>-->
+					<li><a href="#"><img src="icones/ico-account.png" alt="account" class="icones"></a></li>
+					
+					<li><a href="#"></a><img src="icones/ico-cart-orange-petit.png" alt="cart-orange" class="icones"></a></li>
+					
+					<li><a href="#"><img src="icones/ico-heart-bleu-contour.png"></a></li>
 				</ul>
 			</nav>
 		</header>
-			<body>
-				<div id="slider">
-					<img src="images/slider-home.png" alt="slider" title="slider" class="slider">
-				</div>
+		<body>
+			<div id="slider">
+				<img src="images/slider-home.png" alt="slider" title="slider" class="slider">
+			</div>
 
-				<div id="middle">
-					<div id="img_left"><img src="icones/ico-range-race.png" class="ico_middle"><p>RACE</p></div>
-					<div id="img_middle"><img src="icones/ico-range-wave.png" class="ico_middle"><p>WAVE</p></div>
-					<div id="img_right"><img src="icones/ico-range-discover.png" class="ico_middle"><p>DISCOVER</p></div>
-				</div>
-</body>
+			<div id="middle">
+				<div id="img_left"><img src="icones/ico-range-white-race.png" class="ico_middle"></div>
+				<div id="img_middle"><img src="icones/ico-range-white-wave.png" class="ico_middle"></div>
+				<div id="img_right"><img src="icones/ico-range-white-discover.png" class="ico_middle"></div>
+			</div>
+		</body>
+		<footer>
+		<h2>NEWSLETTER<span>      </span></h2>
+		</footer>
 </html>
