rien ne va plus

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<header>
 			<div id="header">
 				<img src="images/logo-lokahi-menu-top.png" alt="logo" class="logo" title="logo">
-					<nav class="menu_principal">
+					<nav id="menus">
 						<div id="menu">
-							<ul >
+							<ul>
 								<li><a href="PHILOSOPHY.html">PHILOSOPHY</a></li>
 								<li><a href="DESIGN.html">DESIGN</a></li>
 								<li><a href="DESIGN.HTML">SHOP</a></li>
