hover cadre blanc ok

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 							<ul>
 								<li><a href="PHILOSOPHY.html">PHILOSOPHY</a></li>
 								<li><a href="DESIGN.html">DESIGN</a></li>
-								<li><a href="DESIGN.HTML">SHOP</a></li>
-								<li><a href="RIDERS">RIDERS</a></li>
-								<li><a href="RETRAILERS">RETRAILERS</a></li>
+								<li><a href="DESIGN.html">SHOP</a></li>
+								<li><a href="RIDERS.html">RIDERS</a></li>
+								<li><a href="RETRAILERS.htmlmenu">RETRAILERS</a></li>
 							</ul>
 						</div>
 						<div id="icones">
@@ -42,9 +42,9 @@
 			</div>
 
 			<div id="middle">
-				<div id="img_left"><img src="icones/ico-range-white-race.png" class="ico_middle"></div>
-				<div id="img_middle"><img src="icones/ico-range-white-wave.png" class="ico_middle"></div>
-				<div id="img_right"><img src="icones/ico-range-white-discover.png" class="ico_middle"></div>
+				<div id="img_left"><img src="icones/ico-range-white-race.png" class="ico_middle"><div id="middle_hover_left"><img src="icones/ico-range-race-mini.png"></div></div>
+				<div id="img_middle"><img src="icones/ico-range-white-wave.png" class="ico_middle"><div id="middle_hover_middle"><img src="icones/ico-range-wave-mini.png"></div></div>
+				<div id="img_right"><img src="icones/ico-range-white-discover.png" class="ico_middle"><div id="middle_hover_right"><img src="icones/ico-range-discover-mini.png"></div></div>
 			</div>
 		</body>
 		<footer>
