--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 			</div>
 
 			<div id="middle">
-				<div id="img_left"><img src="icones/ico-range-white-race.png" class="ico_middle"><div id="middle_hover_left"><img src="icones/ico-range-race-mini.png"></div></div>
-				<div id="img_middle"><img src="icones/ico-range-white-wave.png" class="ico_middle"><div id="middle_hover_middle"><img src="icones/ico-range-wave-mini.png"></div></div>
-				<div id="img_right"><img src="icones/ico-range-white-discover.png" class="ico_middle"><div id="middle_hover_right"><img src="icones/ico-range-discover-mini.png"></div></div>
+				<div id="img_left"><img src="icones/ico-range-white-race.png" class="ico_middle"><div id="middle_hover_left"><img src="icones/ico-range-race.png" class="ico_hover"><button><a href="#">DISCOVER</a></button></div></div>
+				<div id="img_middle"><img src="icones/ico-range-white-wave.png" class="ico_middle"><div id="middle_hover_middle"><img src="icones/ico-range-wave.png" class="ico_hover"><button><a href="#">DISCOVER</a></button></div></div>
+				<div id="img_right"><img src="icones/ico-range-white-discover.png" class="ico_middle"><div id="middle_hover_right"><img src="icones/ico-range-discover.png" class="ico_hover"><button><a href="#">DISCOVER</a></button></div></div>
 			</div>
 		</body>
 		<footer>
