final mercredi soir

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 		<head>
 			<title>LOKAHI - WATER EXPLORER</title>
 			<link rel="stylesheet" type="text/css" href="style.css">
+			<link rel="stylesheet" type="text/css" href="style2.css">
+
 			<link rel="icon" type="image/png" href="icones/ico-range-lokahi-mini.png">
 			<!--<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"> -->
 			<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -11,7 +13,7 @@
 	
 		<header>
 			<div id="header">
-				<img src="images/logo-lokahi-menu-top.png" alt="logo" class="logo" title="logo">
+				<img src="images/lokahiboards-logo-fond-blanc-longueur.jpg" alt="logo" class="logo" title="logo">
 					<nav id="menus">
 						<div id="menu">
 							<ul>
@@ -19,7 +21,7 @@
 								<li><a href="DESIGN.html">DESIGN</a></li>
 								<li><a href="DESIGN.html">SHOP</a></li>
 								<li><a href="RIDERS.html">RIDERS</a></li>
-								<li><a href="RETRAILERS.htmlmenu">RETRAILERS</a></li>
+								<li><a href="RETRAILERS.htmlmenu">RETAILERS</a></li>
 							</ul>
 						</div>
 						<div id="icones">
@@ -37,14 +39,33 @@
 				</div>
 		</header>
 		<body>
-			<div id="slider">
+			<section id="slideshow">
+		
+				<div class="container">
+					<div class="c_slider"></div>
+					<div class="slider">
+						<figure>
+							<img src="images/slider-home.png" alt="slide_home"/>
+						</figure><!-- -->
+						<figure>
+							<img src="images/slider2.png" alt="slider2"/>
+						</figure><!-- -->
+						<figure>
+							<img src="images/slider3.png" alt="slider3"/>
+						</figure>
+					</div>
+				</div>
+					
+				<span id="timeline"></span>
+			</section>
+			<!--<div id="slider">
 				<img src="images/slider-home.png" alt="slider" title="slider" class="slider">
-			</div>
+			</div>-->
 
 			<div id="middle">
-				<div id="img_left"><img src="icones/ico-range-white-race.png" class="ico_middle"><div id="middle_hover_left"><img src="icones/ico-range-race.png" class="ico_hover"><button><a href="#">DISCOVER</a></button></div></div>
-				<div id="img_middle"><img src="icones/ico-range-white-wave.png" class="ico_middle"><div id="middle_hover_middle"><img src="icones/ico-range-wave.png" class="ico_hover"><button><a href="#">DISCOVER</a></button></div></div>
-				<div id="img_right"><img src="icones/ico-range-white-discover.png" class="ico_middle"><div id="middle_hover_right"><img src="icones/ico-range-discover.png" class="ico_hover"><button><a href="#">DISCOVER</a></button></div></div>
+				<div id="img_left"><img src="icones/ico-range-white-race.png" class="ico_middle"><div id="middle_hover_left"><img src="icones/ico-range-race.png" class="ico_hover"><a href="#"><button>DISCOVER</button></a></div></div>
+				<div id="img_middle"><img src="icones/ico-range-white-wave.png" class="ico_middle"><div id="middle_hover_middle"><img src="icones/ico-range-wave.png" class="ico_hover"><a href="#"><button>DISCOVER</button></a></div></div>
+				<div id="img_right"><img src="icones/ico-range-white-discover.png" class="ico_middle"><div id="middle_hover_right"><img src="icones/ico-range-discover.png" class="ico_hover"><a href="#"><button>DISCOVER</button></a></div></div>
 			</div>
 		</body>
 		<footer>
