--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 			<title>LOKAHI - WATER EXPLORER</title>
 			<link rel="stylesheet" type="text/css" href="style.css">
 			<link rel="stylesheet" type="text/css" href="style2.css">
+			<link rel="stylesheet" type="text/css" href="slider.css">
 
 			<link rel="icon" type="image/png" href="icones/ico-range-lokahi-mini.png">
 			<!--<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"> -->
@@ -67,8 +68,13 @@
 				<div id="img_middle"><img src="icones/ico-range-white-wave.png" class="ico_middle"><div id="middle_hover_middle"><img src="icones/ico-range-wave.png" class="ico_hover"><a href="#"><button>DISCOVER</button></a></div></div>
 				<div id="img_right"><img src="icones/ico-range-white-discover.png" class="ico_middle"><div id="middle_hover_right"><img src="icones/ico-range-discover.png" class="ico_hover"><a href="#"><button>DISCOVER</button></a></div></div>
 			</div>
+			<div class="separation"></div>
 		</body>
 		<footer>
-		<h2>NEWSLETTER<span>      </span></h2>
-		</footer>
+			<div>
+				<div><h5>NEWSLETTER<span>______</span></h5></div>
+				<div><form>VOTRE E-MAIL</form></div>
+				<div><button>S'INSCRIRE</button></div>
+					
+			</div></footer>
 </html>
