--- a/backup/index.html
+++ b/backup/index.html
@@ -22,7 +22,7 @@
 								<li><a href="DESIGN.html">DESIGN</a></li>
 								<li><a href="DESIGN.html">SHOP</a></li>
 								<li><a href="RIDERS.html">RIDERS</a></li>
-								<li><a href="RETAILERS.html">RETAILERS</a></li>
+								<li><a href="RETRAILERS.htmlmenu">RETAILERS</a></li>
 							</ul>
 						</div>
 						<div id="icones">
@@ -110,7 +110,7 @@
 						<li>8, rue Georges Guynemer</li>
 						<li>22190 Plerin</li>
 						<li>FRANCE</li>
-						<li>T: +33 (0)9 81 93 68 76</li>
+						<li>T:+33 (0)9 81 93 68 76</li>
 					</ul>
 				</div>
 			</div>
